--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         .intro-text{
             font-size: 1.25rem;
@@ -27,13 +28,19 @@
             </div>
             <div class="nav-menu-block">
                 <div class="nav-menu">
-                    <a href="#" class="nav-item">
+                    <a href="#" class="nav-item btn btn-secondary">
                         Home
                     </a>
-                    <a href="./fitness/fitness-studio.html" class="nav-item">
+                    <a href="./fitness/fitness-studio.html" class="nav-item btn btn-primary">
                         Fitness Studio
                     </a>
+                    <a href="./js-task/index.html" class="nav-item btn btn-primary">
+                        JavaScript tasks
+                    </a>
                 </div>
+                <button type="button" onclick="toggleTheme()" class="btn-toggle-theme">
+                    Theme
+                </button>
             </div>
         </div>
     </header>
@@ -67,7 +74,7 @@
                     <p class="intro-text">
                         I'm a passionate 20-year-old web developer with over 3 years of experience in crafting dynamic and responsive websites. My expertise lies in technologies like Vue.js, Less, HTML, CSS, and Tailwind CSS, and I also have solid experience with React.js. In addition to development, I bring a strong eye for design, with hands-on skills in Figma to create user-friendly and visually appealing interfaces. Explore my work and let's collaborate to build something great together!
                     </p>
-                    <a href="#contactme" class="nav-item" style="color: #ffffff">
+                    <a href="#contactme" class="nav-item" id="btn-contactme">
                         Contact me
                     </a>
                 </div>
@@ -83,6 +90,9 @@
                         <div class="hobby-img-block">
                             <img src="asset/boy-programming-room.avif"/>
                         </div>
+                        <button type="button" onclick="ChangeImageHobby()" class="btn-change-img-hobby">
+                            Next image
+                        </button>
                     </div>
                     <div class="hobby-text-out-block">
                         <div class="hobby-title">
@@ -141,18 +151,20 @@
     <footer id="contactme">
         <div class="form-container">
             <h2>Contact Me</h2>
-            <form method="post">
+            <form action="https://script.google.com/macros/s/AKfycbxVQMUBb6DgzXsQABoAAK2XK4VvGV_APjFNFPmaCTkswB35Nf-WKDMxdpeP0LQdA-m42w/exec" method="post">
                 <div class="input-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required minlength="2" maxlength="20" autocomplete="off">
                 </div>
                 <div class="input-group">
-                    <label for="number">Phone Number</label>
-                    <input type="tel" id="number" name="number" placeholder="Enter your phone number" required pattern="[0-9]{10}">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required autocomplete="off">
                 </div>
-                <button type="submit" class="submit-btn">Submit</button>
+                <button type="submit" class="submit-btn btn-primary">Submit</button>
             </form>
         </div>
     </footer>
+    <script src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
